--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,25 @@
-<web-app version="2.4"
-	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
-	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<!--<web-app version="3.0"-->
+		 <!--xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
+		 <!--xsi:schemaLocation="http://java.sun.com/xml/ns/javaee -->
+<!--http://java.sun.com/xml/ns/j2ee/web-app_3_0.xsd">-->
 
-	<display-name>Spring MVC Application</display-name>
 
-    <servlet>
-		<servlet-name>mvc-dispatcher</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-	</servlet>
+	<!--<servlet>-->
+		<!--<servlet-name>mvc-dispatcher</servlet-name>-->
+		<!--<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>-->
+		<!--<init-param>-->
+			<!--<param-name>contextClass</param-name>-->
+			<!--<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>-->
+		<!--</init-param>-->
+		<!--<init-param>-->
+			<!--<param-name>contextConfigLocation</param-name>-->
+			<!--<param-value>com.pluralsight.WebConfig</param-value>-->
+		<!--</init-param>-->
+		<!--<load-on-startup>1</load-on-startup>-->
+	<!--</servlet>-->
 
-	<servlet-mapping>
-		<servlet-name>mvc-dispatcher</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
-</web-app>
+	<!--<servlet-mapping>-->
+		<!--<servlet-name>mvc-dispatcher</servlet-name>-->
+		<!--<url-pattern>*.html</url-pattern>-->
+	<!--</servlet-mapping>-->
+<!--</web-app>-->
