--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <springData.version>1.9.0.RELEASE</springData.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <start-class>com.pluralsight.Application</start-class>
+        <start-class>com.maxbilbow.Application</start-class>
         <java.version>1.8</java.version>
     </properties>
     <parent>
